adjust clashclient to return List.of, make endpoint of leaguexp return set